--- a/package.json
+++ b/package.json
@@ -47,21 +47,22 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "8.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "4.0.8",
     "husky": "^7.0.1",
     "prettier": "^2.3.2"
   },
   "lint-staged": {
-    "*.tsx": [
+    "*.{js,ts,tsx}": [
       "eslint . --fix",
       "prettier --write"
     ]
