--- a/.prettierrc
+++ b/.prettierrc
@@ -5,12 +5,12 @@
   "semi": true,
   "quoteProps": "as-needed",
   "singleQuote": false,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParents": "always",
   "endOfLine": "auto",
   "htmlWhitespaceSensitivity": "css",
   "embeddedLanguageFormatting": "off",
   "jsxBracketSameLine": true,
-  "jsxSingleQuote": false
+  "jsxSingleQuote": false,
 }
