test(image): add test image
require를 이용해서 이미지 사용했기에 eslint rule에 'global-require' 관련 설정해줌

#7

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
   "rules": {
     "no-underscore-dangle": "off", // _언더스코어 식별자 사용 관련 룰 비활성화
     "no-alert": "off", // alert 자주 사용하므로 비활성화
+    "global-require": "off",
     "react-hooks/rules-of-hooks": "error", // chechs rules of hooks
     "react-hooks/exhaustive-deps": "warn", // dependency 관련 에러는 경고(노란줄)로 바꿈
     "react/jsx-filename-extension": [
