--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -17,5 +18,5 @@
     "jsx": "react-jsx",
     "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
