--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "eslint": "^7.32.0",
