fix(deploy): fix ci error: no matching files;artifacts
#41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: node:14.15.4
 pages:
   artifacts:
     paths:
-      - build
+      - public
   cache:
     paths:
       - node_modules/.cache
