--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "axios": "^0.22.0",
+    "dayjs": "^1.11.2",
+    "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modern-drawer": "^1.1.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-scrollbars-custom": "^4.0.27",
+    "react-textarea-autosize": "^8.3.3",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3",
+    "swr": "^0.5.7",
     "typescript": "^4.1.2"
   },
   "scripts": {
@@ -43,6 +52,8 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "eslint": "^7.32.0",
