--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drawer-honeybee": "^0.0.1",
     "react-modern-drawer": "^1.1.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
