--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,20 @@
 image: node:14.15.4
+stages:
+  - build
+  - deploy
 
-pages:
+build test to production:
+  stage: build
+  only:
+    - test
+  script:
+    - yarn install --frozen-lockfile
+    - yarn build
+
+deploy test to production:
+  stage: deploy
+  only:
+    - test
   artifacts:
     paths:
-      - public
-  cache:
-    paths:
-      - node_modules/.cache
-  only:
-    - main
-  script:
-    - yarn
-    - yarn build
-    - rm -rf public
-    - mv build public
-  stage: deploy
+      - build
