--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,16 @@
 image: node:14.15.4
-stages:
-  - build
-  - deploy
 
-build test to production:
-  stage: build
-  only:
-    - test
+stages:
+  - build_and_deploy
+
+build:
+  stage: build_and_deploy
   script:
     - yarn install --frozen-lockfile
     - yarn build
-
-deploy test to production:
-  stage: deploy
   only:
     - test
+
   artifacts:
     paths:
       - build
