fix(build): fix `Cleaning up project directory and file...` error
`Cleaning up project directory and file based variables`

#41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,11 @@ build:
   script:
     - yarn install --frozen-lockfile
     - yarn build
+    - rm -rf public
+    - mv build public
   only:
     - test
 
   artifacts:
     paths:
-      - build
+      - public
