--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,23 @@
 image: node:14.15.4
 
 stages:
-  - build_and_deploy
+  - build
+  - deploy
 
 build:
-  stage: build_and_deploy
+  stage: build
   script:
     - yarn install --frozen-lockfile
     - yarn build
-    - rm -rf public
-    - mv build public
   only:
     - test
 
+pages:
+  image: alpine:latest
+  stage: deploy
+  script:
+    - rm -rf public
+    - mv build public
   artifacts:
     paths:
       - public
