fix(build): add artifacts
#41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,14 @@ build:
     - yarn build
   only:
     - test
+  artifacts:
+    paths:
+      - build/
 
 pages:
   image: alpine:latest
   stage: deploy
   script:
-    - rm -rf public
     - mv build public
   artifacts:
     paths:
