--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ant_frontend",
+  "homepage": "https://ant_community.gitlab.io/ant_community_frontend_dev3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
