fix(buuild): change homepage url for `You Need to Enable Javascript to Run This App`
#41

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ant_frontend",
-  "homepage": "https://ant_community.gitlab.io/ant_community_frontend_dev3",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
