--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
   image: node:16.13.2
   stage: build
   variables:
-    PUBLIC_URL: https://ant_community.gitlab.io/ant_community_frontend_dev3/
+    PUBLIC_URL: /ant_community_frontend_dev3
   script:
     - yarn install --frozen-lockfile
     - yarn build
