--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ant_frontend",
-  "homepage": ".",
+  "homepage": "ant_community_frontend_dev3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
