ci: change only branch name test->main
#41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
     - yarn install --frozen-lockfile
     - yarn build
   only:
-    - test
+    - main
   artifacts:
     paths:
       - build/
