--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.22.0",
     "dayjs": "^1.11.2",
     "history": "^5.3.0",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-drawer-honeybee": "^0.0.1",
     "react-modern-drawer": "^1.1.1",
+    "react-redux": "^8.0.2",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
