--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.2",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "openvidu-browser": "^2.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-drawer-honeybee": "^0.0.1",
@@ -23,6 +24,7 @@
     "react-textarea-autosize": "^8.3.3",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
+    "styled-components": "^5.3.5",
     "swr": "^0.5.7",
     "typescript": "^4.1.2"
   },
@@ -57,6 +59,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "eslint": "^7.32.0",
