build: npm i react-beforeunload

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^2.0.6",
     "openvidu-browser": "^2.22.0",
     "react": "^17.0.2",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^17.0.2",
     "react-drawer-honeybee": "^0.0.1",
     "react-modern-drawer": "^1.1.1",
@@ -54,6 +55,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "^17.0.13",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
