--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ant_frontend",
-  "homepage": "ant_community_frontend_dev3",
+  "homepage": "https://ehddud1006.github.io/frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.22.0",
     "dayjs": "^1.11.2",
+    "gh-pages": "^4.0.0",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "openvidu-browser": "^2.22.0",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
