--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-drawer-honeybee": "^0.0.1",
     "react-modern-drawer": "^1.1.1",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
