--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.2",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "msw": "^0.49.0",
     "openvidu-browser": "^2.22.0",
     "react": "^17.0.2",
     "react-beforeunload": "^2.5.3",
