--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-storybook": "^0.6.8",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "babel-loader": "8.1.0"
   },
   "eslintConfig": {
     "overrides": [
