--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.22.0",
     "dayjs": "^1.11.2",
+    "easytimer.js": "^4.5.4",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "msw": "^0.49.0",
