--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "babel-loader": "8.1.0",
+    "easytimer-react-hook": "^2.0.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^14.0.0",
