--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-storybook": "^0.6.8",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "storybook-preset-craco": "^0.0.6"
   },
   "eslintConfig": {
     "overrides": [
