--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ant_frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bee-community.github.io/frontend2",
   "dependencies": {
     "@egjs/react-flicking": "^4.10.5",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.22.0",
     "dayjs": "^1.11.2",
     "easytimer.js": "^4.5.4",
+    "gh-pages": "^5.0.0",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "msw": "^0.49.0",
@@ -36,7 +38,9 @@
     "test": "craco test",
     "eject": "craco eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
